--- a/school-crowd.html
+++ b/school-crowd.html
@@ -6,7 +6,7 @@ https://github.com/tomtor/school-crowd
 
 -->
 <head>
-<title>PDOK Leaflet Example</title>
+<title>School Crowd Sourcing</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
