--- a/school-crowd.html
+++ b/school-crowd.html
@@ -114,7 +114,7 @@ https://github.com/tomtor/school-crowd
 		for (i= 0; i < plotlist.length; i++) {
 			try {
 				pu = "<table style=\"border-collapse: separate; border-spacing: 5px;\"><tr class=\"smallrow\"><td>UUID:</td><td>" + plotlist[i].properties.uuid + "</td></tr>" +
-					"<tr class=\"smallrow\"><td>Timestamp:</td><td>" + plotlist[i].properties.timestamp + "</td></tr>" +
+					"<tr class=\"smallrow\"><td>Tijdstip:</td><td>" + plotlist[i].properties.timestamp + "</td></tr>" +
 					"<tr class=\"smallrow\"><td>IP info:</td><td>" + plotlist[i].properties.ip_info +
 					"</td></tr><tr/>" +
 					"<tr><td>Gebruiker:</td><td>" + plotlist[i].properties.user + "</td></tr>" +
