--- a/school-crowd.html
+++ b/school-crowd.html
@@ -29,6 +29,8 @@ https://github.com/tomtor/school-crowd
 	var serverBase = 'https://v7f.eu/pdok-demo-data';
 	var server = serverBase + '/0ff8d17a-dc80-11e5-b7b0-b827eb842aa1';
 
+  var hasTouch = 'ontouchstart' in window || navigator.msMaxTouchPoints;
+
 	var res = [3440.640, 1720.320, 860.160, 430.080, 215.040, 107.520, 53.760, 26.880, 13.440, 6.720, 3.360, 1.680, 0.840, 0.420];
 
 	var RDM = new L.Proj.CRS.TMS(
@@ -69,6 +71,7 @@ https://github.com/tomtor/school-crowd
   function getDPI() {
     return document.getElementById("dpi").offsetHeight;
   }
+
 	function hex2a(hexx) {
 		var hex = hexx.toString();//force conversion
 		var str = '';
@@ -76,6 +79,7 @@ https://github.com/tomtor/school-crowd
 			str += String.fromCharCode(parseInt(hex.substr(i, 2), 16));
 		return str;
 	}
+
 	function a2hex(str) {
 		var arr1 = [];  
 		for (var n = 0, l = str.length; n < l; n ++)   
@@ -150,7 +154,10 @@ https://github.com/tomtor/school-crowd
 							geojsonMarkerOptions.fillColor= "#ffffff";
 						return L.circleMarker(latlng, geojsonMarkerOptions);
 					}
-				}).bindLabel(plotlist[i].properties.name).addTo(map).bindPopup(pu);
+				});
+				if (!hasTouch)
+					lm= bindLabel(plotlist[i].properties.name);
+				lm.addTo(map).bindPopup(pu);
 				if (plotlist[i].properties.crypt) {
 					markers[plotlist[i].properties.crypt]= lm;
 				}
