condensed user wachtwoord

--- a/school-crowd.html
+++ b/school-crowd.html
@@ -242,7 +242,7 @@ https://github.com/tomtor/school-crowd
 <p></p>
   <div class="row">
     <div class="col-sm-4">
-    <table id="userpw" class="table">
+    <table id="userpw" class="table table-condensed">
     <tr><td class="identity">Gebruiker:</td><td><input id="idInput" size="15" type="text" value="Demo"/></td></tr>
     <tr><td class="identity">Wachtwoord:</td><td><input id="pwInput" size="15" value="test" type="text"/></td></tr>
 		<tr><td><div id="helpDiv">
