--- a/school-crowd.html
+++ b/school-crowd.html
@@ -18,7 +18,13 @@ https://github.com/tomtor/school-crowd
 </head>
 <body>
 <div class="container">
-<div id="map" style="margin: -1px; margin-top: 0.1cm;"></div>
+<div id="heading" class="jumbotron">
+			<table width="100%"><tr>
+      <td style="text-align: center;"><h1>School Crowd</h1></td><td class="logo"><a href="https://www.kadaster.nl"><img src="http://www.kadaster.nl/static/kadasterpresentation/gfx/logo.png"/></a></td>
+			</tr></table>
+      <p>Welkom...</p> 
+</div>
+<div id="map" style="margin-right: -2px;"></div>
 <div id="dpi" style="height: 1in; left: -100%; position: absolute; top: -100%; width: 1in;"></div>
 <script src="leaflet.js"></script>
 <script src="https://rawgithub.com/kartena/Proj4Leaflet/master/lib/proj4-compressed.js"></script>
