--- a/school-crowd.html
+++ b/school-crowd.html
@@ -24,7 +24,7 @@ https://github.com/tomtor/school-crowd
 			</tr></table>
       <p>Welkom...</p> 
 </div>
-<div id="map" style="margin-right: -2px;"></div>
+<div id="map" style="margin-top: -10px; margin-right: -2px;"></div>
 <div id="dpi" style="height: 1in; left: -100%; position: absolute; top: -100%; width: 1in;"></div>
 <script src="leaflet.js"></script>
 <script src="https://rawgithub.com/kartena/Proj4Leaflet/master/lib/proj4-compressed.js"></script>
