--- a/school-crowd.html
+++ b/school-crowd.html
@@ -16,7 +16,7 @@ https://github.com/tomtor/school-crowd
 <link rel="stylesheet" href="leaflet.css" />
 <link rel="stylesheet" href="leaflet.label.css" />
 <link rel="stylesheet" href="school-crowd.css" />
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://domoritz.github.io/leaflet-locatecontrol/dist/L.Control.Locate.min.css" />
 </head>
 <body>
