--- a/school-crowd.html
+++ b/school-crowd.html
@@ -6,9 +6,10 @@ https://github.com/tomtor/school-crowd
 
 -->
 <head>
-<title>School Crowd Sourcing</title>
 <meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>School Crowd Sourcing</title>
 <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
