--- a/school-crowd.html
+++ b/school-crowd.html
@@ -241,8 +241,8 @@ https://github.com/tomtor/school-crowd
 	lastMark= null;
 	function onMapClick(e) {
 		var warning= "";
-		if ($("#pwInput").val() == "test")
-			 warning= "(Wachtwoord is 'test', kies een betere!)";
+		//if ($("#pwInput").val() == "" || $("#idInput").val == "")
+		//	 warning= "(Naam/Wachtwoord is leeg!)";
 		var pu = "<table style=\"border-collapse: separate; border-spacing: 5px;\">" +
 			// "<tr class=\"smallrow\"><td>Geprikt op:</td><td><b>" + e.latlng + "</b></td></tr>" +
 			"<tr><td>Naam:</td><td><input id=\"nameInput\" size=\"14\" type=\"text\"/></td></tr>" +
@@ -259,6 +259,10 @@ https://github.com/tomtor/school-crowd
 		lastMark.addTo(map).bindPopup(pu).openPopup();
 
 		$("#addButton").click(function(event) {
+			if ($("#pwInput").val() == "" || $("#idInput").val == "") {
+				alert("Naam en Wachtwoord zijn verplicht...");
+				return;
+			}
 			if ($("#nameInput").val().length == 0) {
 				alert("Naam is verplicht...");
 				return;
@@ -308,12 +312,18 @@ https://github.com/tomtor/school-crowd
 <p></p>
   <div class="row">
     <div class="col-sm-4">
+<!--
     <table id="userpw" class="table table-condensed">
     <tr><td class="identity">Gebruiker:</td><td><input id="idInput" size="12" type="text" value="Demo"/></td></tr>
     <tr><td class="identity">Wachtwoord:</td><td><input id="pwInput" size="12" value="test" type="text"/></td></tr>
 		<tr><td><div id="helpDiv">
 		</div></td></tr>
     </table>
+-->
+		<label for="inputEmail" class="sr-only">Gebruiker</label>
+        <input type="email" id="idInput" class="form-control" placeholder="Je Naam" required autofocus>
+        <label for="inputPassword" class="sr-only">Wachtwoord</label>
+        <input type="password" id="pwInput" class="form-control" placeholder="Wachtwoord" required>
     </div>
     <div class="col-sm-8">
       <div id="delTable" class="smallerrow">
