--- a/school-crowd.html
+++ b/school-crowd.html
@@ -240,18 +240,13 @@ https://github.com/tomtor/school-crowd
 
 	lastMark= null;
 	function onMapClick(e) {
-		var warning= "";
-		//if ($("#pwInput").val() == "" || $("#idInput").val == "")
-		//	 warning= "(Naam/Wachtwoord is leeg!)";
 		var pu = "<table style=\"border-collapse: separate; border-spacing: 5px;\">" +
-			// "<tr class=\"smallrow\"><td>Geprikt op:</td><td><b>" + e.latlng + "</b></td></tr>" +
 			"<tr><td>Naam:</td><td><input id=\"nameInput\" size=\"14\" type=\"text\"/></td></tr>" +
 			"<tr><td><select id=\"selInput\">" +
 				"<option value=\"Dier\">Dier</option>" +
 				"<option value=\"Boom\">Boom</option>" +
 				"<option value=\"Gebouw\">Gebouw</option>" +
-			"</select></td></tr></table>" +
-			"<div style=\"color: red;\">"+warning+"</div>" +
+			"</select></td></tr></table><br/>" +
 			"<button id=\"addButton\" class=\"btn btn-success btn-sm btn-block\" type=\"button\">Toevoegen</button>";
 		if (lastMark)
 			map.removeLayer(lastMark);
