--- a/school-crowd.html
+++ b/school-crowd.html
@@ -159,9 +159,9 @@ https://github.com/tomtor/school-crowd
 	}
 
 	function UTC2Local(str) {
-		var hour= (parseInt(str.substring(11,13)) + 1).toString();
-		str= setCharAt(str, 11, hour.charAt(0));
-		str= setCharAt(str, 12, hour.charAt(1));
+		//var hour= (parseInt(str.substring(11,13)) + 1).toString();
+		//str= setCharAt(str, 11, hour.charAt(0));
+		//str= setCharAt(str, 12, hour.charAt(1));
 		return str;
 	}
 
