Handle no wachtwoord

--- a/school-crowd.html
+++ b/school-crowd.html
@@ -179,7 +179,8 @@ https://github.com/tomtor/school-crowd
 				markers[crypt]= null;
 			} else
 				alert("Verkeerd wachtwoord...");
-		}
+		} else
+				alert("Geen wachtwoord...");
 	}
 
 	function markersReceived(result) {
