Remove need for CORS for IE9

--- a/school-crowd.html
+++ b/school-crowd.html
@@ -96,7 +96,8 @@ https://github.com/tomtor/school-crowd
 <script src="proj4leaflet.js"></script>
 <script src="aes.js"></script>
 <script>
-	var serverBase = 'https://v7f.eu/pdok-demo-data';
+	//var serverBase = 'https://v7f.eu/pdok-demo-data';
+	var serverBase = '/pdok-demo-data';
 	var server = serverBase + '/0ff8d17a-dc80-11e5-b7b0-b827eb842aa1';
 
 	var hasTouch = 'ontouchstart' in window || navigator.msMaxTouchPoints;
