--- a/school-crowd.html
+++ b/school-crowd.html
@@ -81,7 +81,7 @@ https://github.com/tomtor/school-crowd
 <h4 class="modal-title">Let Op</h4>
 </div>
 <div class="modal-body">
-<div class="alert alert-info"><strong>Naam is verplicht<strong></div>
+<div class="alert alert-info"><strong>Omschrijving is verplicht<strong></div>
 </div>
 <div class="modal-footer">
 <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
@@ -241,7 +241,10 @@ https://github.com/tomtor/school-crowd
 					"<tr class=\"smallrow\"><td>IP info:</td><td>" + plotlist[i].properties.ip_info +
 					"</td></tr><tr/>" +
 					"<tr><td>Gebruiker:</td><td>" + plotlist[i].properties.user + "</td></tr>" +
-					"<tr><td>Naam:</td><td><b>" + plotlist[i].properties.name + "</b></td></tr>" +
+					"<tr><td>Omschrijving:</td><td><b>" + plotlist[i].properties.name + "</b></td></tr>" +
+					(plotlist[i].properties.link ?
+						("<tr><td>Link:</td><td><b><a href=\"" + hex2a(plotlist[i].properties.link) + "\" target=\"_blank\">toon</a></b></td></tr>")
+						: "") +
 					"<tr><td>Soort:</td><td><b>" + plotlist[i].properties.kind + "</td></tr></table>";
 				if (plotlist[i].properties.crypt) {
 					pu= pu + "<button id=\"delCryptButton\" class=\"btn btn-danger btn-sm btn-block\" onclick=\"delSecret('"
@@ -268,6 +271,7 @@ https://github.com/tomtor/school-crowd
 				}
 			}
 			catch (err) {
+				console.log(err);
 			}
 		}
 	}
@@ -284,7 +288,8 @@ https://github.com/tomtor/school-crowd
 	lastMark= null;
 	function onMapClick(e) {
 		var pu = "<table style=\"border-collapse: separate; border-spacing: 5px;\">" +
-			"<tr><td>Naam:</td><td><input id=\"nameInput\" size=\"14\" type=\"text\"/></td></tr>" +
+			"<tr><td>Omschrijving:</td><td><input id=\"nameInput\" size=\"14\" type=\"text\"/></td></tr>" +
+			"<tr><td>Link (bv foto):</td><td><input id=\"linkInput\" size=\"14\" type=\"text\"/></td></tr>" +
 			"<tr><td>Kies:</td><td><select id=\"selInput\" class=\"form-control\">" +
 				"<option value=\"Dier\">Dier</option>" +
 				"<option value=\"Boom\">Boom</option>" +
@@ -313,6 +318,7 @@ https://github.com/tomtor/school-crowd
 				},
 				"properties" : {
 					"name" : $("#nameInput").val(),
+					"link" : a2hex($("#linkInput").val()),
 					"kind" : $("#selInput").val(),
 					"user" : $("#idInput").val()
 				}
@@ -322,7 +328,8 @@ https://github.com/tomtor/school-crowd
 			var msg= server + '/add/' + JSON.stringify(gjf);
 			$.ajax({url: msg, success: function(result){
 				var pu = "<table style=\"border-collapse: separate; border-spacing: 5px;\"><tr class=\"smallrow\"><td>Geheime Sleutel:</td><td>"
-				+ result + "</td></tr><tr><td>Naam:</td><td><b>" + gjf.properties.name + "</td></tr>" +
+				+ result + "</td></tr><tr><td>Omschrijving:</td><td><b>" + gjf.properties.name + "</td></tr>" +
+				"<tr><td>Link:</td><td><b><a href=\"" +  hex2a(gjf.properties.link) + "\" target=\"_blank\">toon</a></b></td></tr>" +
 				"<tr><td>Soort:</td><td><b>" +  gjf.properties.kind + "</b></td></tr></table>" +
 				"<button id=\"delButton\" onclick=\"delObject('"+result+"')\" type=\"button\" class=\"btn btn-warning btn-sm btn-block\">Verwijder</button>";
 				markers[result]= lastMark;
@@ -359,7 +366,7 @@ https://github.com/tomtor/school-crowd
       <div id="delTable" class="smallerrow">
         <table id="keyTable" class="table table-condensed" >
         <tr>
-        <th style="text-align:center; width:15%">Toegevoegd</th><th style="text-align:left;width:25%;">Naam</th><th style="width:60%; text-align:left">Geheime Sleutel</th>
+        <th style="text-align:center; width:15%">Toegevoegd</th><th style="text-align:left;width:25%;">Omschrijving</th><th style="width:60%; text-align:left">Geheime Sleutel</th>
         </tr>
         </table>
       </div>
