Better unicode handling

--- a/school-crowd.html
+++ b/school-crowd.html
@@ -177,6 +177,13 @@ https://github.com/tomtor/school-crowd
 		return document.getElementById("dpi").offsetHeight;
 	}
 
+	function addslashes( str ) {
+		return (str + '').replace(/[\\"']/g, '\\$&').replace(/\u0000/g, '\\0');
+	}
+	function clean( str ) {
+		return (str + '').replace(/[^a-zA-Z0-9\-éëèáäàï]+/g, " ");
+	}
+
 	function hex2a(hexx) {
 		var hex = hexx.toString();//force conversion
 		var str = '';
@@ -242,8 +249,8 @@ https://github.com/tomtor/school-crowd
 					"</td></tr><tr/>" +
 					"<tr><td>Gebruiker:</td><td>" + plotlist[i].properties.user + "</td></tr>" +
 					"<tr><td>Omschrijving:</td><td><b>" + plotlist[i].properties.name + "</b></td></tr>" +
-					(plotlist[i].properties.link ?
-						("<tr><td>Link:</td><td><b><a href=\"" + hex2a(plotlist[i].properties.link) + "\" target=\"_blank\">toon</a></b></td></tr>")
+					(plotlist[i].properties.objlink ?
+						("<tr><td>Link:</td><td><b><a href=\"" + hex2a(plotlist[i].properties.objlink) + "\" target=\"_blank\">toon</a></b></td></tr>")
 						: "") +
 					"<tr><td>Soort:</td><td><b>" + plotlist[i].properties.kind + "</td></tr></table>";
 				if (plotlist[i].properties.crypt) {
@@ -317,8 +324,8 @@ https://github.com/tomtor/school-crowd
 					"coordinates": [ e.latlng.lng , e.latlng.lat ]
 				},
 				"properties" : {
-					"name" : $("#nameInput").val(),
-					"link" : a2hex($("#linkInput").val()),
+					"name" : clean($("#nameInput").val()),
+					"objlink": $("#linkInput").val().length ? a2hex($("#linkInput").val()) : null,
 					"kind" : $("#selInput").val(),
 					"user" : $("#idInput").val()
 				}
@@ -329,7 +336,8 @@ https://github.com/tomtor/school-crowd
 			$.ajax({url: msg, success: function(result){
 				var pu = "<table style=\"border-collapse: separate; border-spacing: 5px;\"><tr class=\"smallrow\"><td>Geheime Sleutel:</td><td>"
 				+ result + "</td></tr><tr><td>Omschrijving:</td><td><b>" + gjf.properties.name + "</td></tr>" +
-				"<tr><td>Link:</td><td><b><a href=\"" +  hex2a(gjf.properties.link) + "\" target=\"_blank\">toon</a></b></td></tr>" +
+				(gjf.properties.objlink ?
+					("<tr><td>Link:</td><td><b><a href=\"" +  hex2a(gjf.properties.objlink) + "\" target=\"_blank\">toon</a></b></td></tr>") : "") +
 				"<tr><td>Soort:</td><td><b>" +  gjf.properties.kind + "</b></td></tr></table>" +
 				"<button id=\"delButton\" onclick=\"delObject('"+result+"')\" type=\"button\" class=\"btn btn-warning btn-sm btn-block\">Verwijder</button>";
 				markers[result]= lastMark;
