--- a/school-crowd.html
+++ b/school-crowd.html
@@ -184,8 +184,8 @@ https://github.com/tomtor/school-crowd
 	function decode( str ) {
 		if (str.substring(0, 4) != "http")
 			str= "http://" + str;
-		// decode ', " and < to / 
-		return str.replace(/[\'\<\"]/g, '\/');
+		// decode ', ", &, > and < to / 
+		return str.replace(/[\'\&\>\<\"]/g, '\/');
 	}
 	function clean( str ) {
 		return str.replace(/[^a-zA-Z0-9\-éëèáäàï]+/g, " ");
