--- a/school-crowd.html
+++ b/school-crowd.html
@@ -90,7 +90,7 @@ https://github.com/tomtor/school-crowd
 
 
 <script src="leaflet.js"></script>
-<script src="https://rawgithub.com/kartena/Proj4Leaflet/master/lib/proj4-compressed.js"></script>
+<script src="proj4-compressed.js"></script>
 <script src="L.Control.Locate.min.js" charset="utf-8"></script>
 <script src="leaflet.label.js"></script>
 <script src="proj4leaflet.js"></script>
