--- a/school-crowd.html
+++ b/school-crowd.html
@@ -41,51 +41,65 @@ https://github.com/tomtor/school-crowd
 </head>
 <body>
 <div class="container">
-<div id="heading" class="jumbotron">
-			<table width="100%"><tr>
-      <td style="text-align: center;"><h1 style="padding: 2px;">School Crowd</h1></td><td class="logo"><a href="https://www.kadaster.nl"><img src="logo.png"/></a></td>
-			</tr></table>
-</div>
+	<div id="heading" class="jumbotron">
+		<table width="100%">
+			<tr>
+				<td style="text-align: center;"><h1 style="padding: 2px;">School Crowd</h1></td><td class="logo"><a href="https://www.kadaster.nl"><img src="logo.png"/></a></td>
+			</tr>
+		</table>
+	</div>
 <div id="map" style="margin-top: -12px; margin-right: -2px;"></div>
 <div id="dpi" style="height: 1in; left: -100%; position: absolute; top: -100%; width: 1in;"></div>
 
 <div id="wrongPW" class="modal fade" role="dialog">
-<div class="modal-dialog"> <div class="modal-content"> <div class="modal-header">
-<button type="button" class="close" data-dismiss="modal">&times;</button>
-<h4 class="modal-title">Let Op</h4>
-</div>
-<div class="modal-body">
-<div class="alert alert-warning"><strong>Verkeerd wachtwoord ingevuld!<strong></div>
-</div>
-<div class="modal-footer">
-<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
-</div> </div> </div>
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<h4 class="modal-title">Let Op</h4>
+			</div>
+			<div class="modal-body">
+				<div class="alert alert-warning"><strong>Verkeerd wachtwoord ingevuld!<strong></div>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+			</div>
+		</div>
+	</div>
 </div>
 
 <div id="noPW" class="modal fade" role="dialog">
-<div class="modal-dialog"> <div class="modal-content"> <div class="modal-header">
-<button type="button" class="close" data-dismiss="modal">&times;</button>
-<h4 class="modal-title">Let Op</h4>
-</div>
-<div class="modal-body">
-<div class="alert alert-info"><strong>Geen Wachtwoord of Gebruikersnaam ingevuld<strong></div>
-</div>
-<div class="modal-footer">
-<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
-</div> </div> </div>
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<h4 class="modal-title">Let Op</h4>
+			</div>
+			<div class="modal-body">
+				<div class="alert alert-info"><strong>Geen Wachtwoord of Gebruikersnaam ingevuld<strong></div>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+			</div>
+		</div>
+	</div>
 </div>
 
 <div id="noName" class="modal fade" role="dialog">
-<div class="modal-dialog"> <div class="modal-content"> <div class="modal-header">
-<button type="button" class="close" data-dismiss="modal">&times;</button>
-<h4 class="modal-title">Let Op</h4>
-</div>
-<div class="modal-body">
-<div class="alert alert-info"><strong>Omschrijving is verplicht<strong></div>
-</div>
-<div class="modal-footer">
-<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
-</div> </div> </div>
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<h4 class="modal-title">Let Op</h4>
+			</div>
+			<div class="modal-body">
+				<div class="alert alert-info"><strong>Omschrijving is verplicht<strong></div>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+			</div>
+		</div>
+	</div>
 </div>
 
 <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
@@ -373,23 +387,23 @@ https://github.com/tomtor/school-crowd
 
 </script>
 <p></p>
-  <div class="row">
-    <div class="col-sm-4">
-			<label for="inputEmail" class="sr-only">Gebruiker</label>
-			<input type="email" id="idInput" class="form-control" placeholder="Je Naam" required autofocus>
-			<label for="inputPassword" class="sr-only">Wachtwoord</label>
-			<input type="password" id="pwInput" class="form-control" placeholder="Wachtwoord" required>
-    </div>
-    <div class="col-sm-8">
-      <div id="delTable" class="smallerrow">
-        <table id="keyTable" class="table table-condensed" >
-        <tr>
-        <th style="text-align:center; width:15%">Toegevoegd</th><th style="text-align:left;width:25%;">Omschrijving</th><th style="width:60%; text-align:left">Geheime Sleutel</th>
-        </tr>
-        </table>
-      </div>
-    </div>
-  </div>
+<div class="row">
+	<div class="col-sm-4">
+		<label for="inputEmail" class="sr-only">Gebruiker</label>
+		<input type="email" id="idInput" class="form-control" placeholder="Je Naam" required autofocus>
+		<label for="inputPassword" class="sr-only">Wachtwoord</label>
+		<input type="password" id="pwInput" class="form-control" placeholder="Wachtwoord" required>
+	</div>
+	<div class="col-sm-8">
+		<div id="delTable" class="smallerrow">
+			<table id="keyTable" class="table table-condensed" >
+				<tr>
+					<th style="text-align:center; width:15%">Toegevoegd</th><th style="text-align:left;width:25%;">Omschrijving</th><th style="width:60%; text-align:left">Geheime Sleutel</th>
+				</tr>
+			</table>
+		</div>
+	</div>
+</div>
 </div>
 </body>
 </html>
