--- a/school-crowd.html
+++ b/school-crowd.html
@@ -317,22 +317,9 @@ https://github.com/tomtor/school-crowd
 	}
 
 	lastMark= null;
-	function onMapClick(e) {
-		var pu = "<table style=\"border-collapse: separate; border-spacing: 5px;\">" +
-			"<tr><td>Omschrijving:</td><td><input id=\"nameInput\" size=\"14\" type=\"text\"/></td></tr>" +
-			"<tr><td>Link (bv foto):</td><td><input id=\"linkInput\" size=\"14\" type=\"text\"/></td></tr>" +
-			"<tr><td>Kies:</td><td><select id=\"selInput\" class=\"form-control\">" +
-				"<option value=\"Dier\">Dier</option>" +
-				"<option value=\"Boom\">Boom</option>" +
-				"<option value=\"Gebouw\">Gebouw</option>" +
-			"</select></td></tr></table><br/>" +
-			"<button id=\"addButton\" class=\"btn btn-success btn-sm btn-block\" type=\"button\">Toevoegen</button>";
-		if (lastMark)
-			map.removeLayer(lastMark);
-		lastMark = L.marker(e.latlng);
-		lastMark.addTo(map).bindPopup(pu).openPopup();
+	lastEvent= null;
 
-		$("#addButton").click(function(event) {
+	function addButton() {
 			if ($("#pwInput").val() == "" || $("#idInput").val == "") {
 				$("#noPW").modal();
 				return;
@@ -345,7 +332,7 @@ https://github.com/tomtor/school-crowd
 				"type": "Feature",
 				"geometry": {
 					"type": "Point",
-					"coordinates": [ e.latlng.lng , e.latlng.lat ]
+					"coordinates": [ lastEvent.latlng.lng, lastEvent.latlng.lat ]
 				},
 				"properties" : {
 					"name" : clean($("#nameInput").val()),
@@ -379,8 +366,24 @@ https://github.com/tomtor/school-crowd
 					var msg= server + '/update/' + result +'/' + JSON.stringify(gjf);
 					$.ajax({url: msg, success: function(result){} });
 				}
-			}})
-		});
+			}});
+	}
+
+	function onMapClick(e) {
+		var pu = "<table style=\"border-collapse: separate; border-spacing: 5px;\">" +
+			"<tr><td>Omschrijving:</td><td><input id=\"nameInput\" size=\"14\" type=\"text\"/></td></tr>" +
+			"<tr><td>Link (bv foto):</td><td><input id=\"linkInput\" size=\"14\" type=\"text\"/></td></tr>" +
+			"<tr><td>Kies:</td><td><select id=\"selInput\" class=\"form-control\">" +
+				"<option value=\"Dier\">Dier</option>" +
+				"<option value=\"Boom\">Boom</option>" +
+				"<option value=\"Gebouw\">Gebouw</option>" +
+			"</select></td></tr></table><br/>" +
+			"<button id=\"addButton\" onclick=\"addButton()\" class=\"btn btn-success btn-sm btn-block\" type=\"button\">Toevoegen</button>";
+		if (lastMark)
+			map.removeLayer(lastMark);
+		lastMark = L.marker(e.latlng);
+		lastEvent = e;
+		lastMark.addTo(map).bindPopup(pu).openPopup();
 	}
 
 	map.on('dblclick', onMapClick);
